style.css
* {
 margin: 0;
 padding: 0;
 font-family: 'Volkhov', serif;
 font-style: bold;
}

body{
  background-image: url("./assets/background.jpg");
  position: relative;
  padding-top: 82px;
}
 
#container {
 width: 600px;
 margin: 50px auto;
}
 
/*Text Sections*/
.section {
 margin: 50px 0;
 padding: 3px;
}

.section, .toTop{
	margin: 0;
	padding: 0;
}
 
.section h1 {
 font: 55px/65px Helvetica, sans-serif;
}
 
.section p {
 font: 15px/25px Helvetica, sans-serif;
}

.logo{
	height: 56px;
	margin-top: -20px;
	width: auto;
	padding-left: 21px;
}

.container-fluid{
	padding: 12px;
}

.navbar-nav {
    display: inline-block;
    float: none;
}

.navbar-collapse {
    text-align: center;
}

#navbar{
	position: sticky;
}

.panel-footer{
	text-align: center;
	display: block;
	padding: 15px 5px;
	margin-top: 20px;
}

.navbar-brand{
	margin: auto;
	border-radius: 5px;
}

.shakes{
	height: auto;
	margin: 5px;
}

h1 a{
	color: 	#808080;
}

h1 a:hover{
	color: 	#A3A2A2;	
}

@media (max-width: 767px) /* @grid-float-breakpoint -1 */
{
    .navbar-fixed-top{
    	position: relative;
    	top: auto;
    }

    .logo{
   		padding-bottom: 5px;
    	padding-left: 32px;    
    }

    .products{
    	padding-top: 56px;
    }

    body{
    	padding: 0;
    }

    .section, .toTop{
	margin: 0;
	padding: 0;
}

}

